// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Renders the UI snapshot correctly 1`] = `
<div
  className="css-8x56sg"
  data-responsive-background-image={true}
  data-testid="ds-hero"
>
  <div
    className="css-0"
    data-testid="ds-hero-grid"
  >
    <div
      className="css-24mlj5"
      data-testid="ds-hero-content"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="primary-hero"
      >
        Hero Primary
      </h1>
      <div
        className="css-0"
      >
        Example Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 2`] = `
<div
  className="css-5oa3pe"
  data-responsive-background-image={true}
  data-testid="ds-hero"
>
  <div
    className="css-14tngpx"
    data-testid="ds-hero-content"
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      data-testid="ds-heading"
      id="tertiary-hero"
    >
      Hero Tertiary
    </h1>
    <p>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </p>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 3`] = `
<div
  className="css-16jme9j"
  data-responsive-background-image={true}
  data-testid="ds-hero"
>
  <div
    className="css-24mlj5"
    data-testid="ds-hero-content"
  >
    <div
      className="css-0"
      style={
        {
          "backgroundImage": "/**/url("https://images.nypl.org/index.php?id=swope_243048&t=r")",
        }
      }
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="image-example"
      >
        <img
          alt="Image example"
          className="css-1xdhyk6"
          id="image-example"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="campaign-hero"
      >
        Hero Campaign
      </h1>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 4`] = `
<div
  className="css-uq9vkr"
  data-responsive-background-image={true}
  data-testid="ds-hero"
>
  <div
    className="css-0"
    data-testid="ds-hero-grid"
  >
    <div
      className="css-24mlj5"
      data-testid="ds-hero-content"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="chakra"
      >
        Hero Primary
      </h1>
      <div
        className="css-0"
      >
        Example Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 5`] = `
<div
  className="css-8x56sg"
  data-responsive-background-image={true}
  data-testid="props"
>
  <div
    className="css-0"
    data-testid="ds-hero-grid"
  >
    <div
      className="css-24mlj5"
      data-testid="ds-hero-content"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        data-testid="ds-heading"
        id="props"
      >
        Hero Primary
      </h1>
      <div
        className="css-0"
      >
        Example Subtitle
      </div>
    </div>
  </div>
</div>
`;
